--- a/about.html
+++ b/about.html
@@ -40,59 +40,18 @@
             </div>
          </div>
       </header>
-      <section class="section section-faq">
+      <section class="section section-about">
          <div class="wrapper">
          	<div class="breabcrumbs">
          		<a href="#" class="link link--breab">Головна</a>
-         		<a href="#" class="link link--breab current">FAQ</a>
+         		<a href="#" class="link link--breab current">Про сервіс</a>
          	</div>
          	<div class="page-header">
-            		<img src="img/faq.png" alt="">
+            		<img src="img/about.png" alt="">
             	</div>
-            <div class="faq">
-               <h2 class="title title--h2 c2 bl">FAQ</h2>
-               <div class="faq-items">
-                  <div class="faq-item active">
-                     <div class="faq-item__head">
-                        <h3 class="title title--h3 bl c1">Est elit tempor ea proident nostrud aliqua in.</h3>
-                        <svg viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M1.41 0.589996L6 5.17L10.59 0.589996L12 2L6 8L0 2L1.41 0.589996Z" fill="#1B65B9"/>
-</svg>
-
-                     </div>
-                     <div class="faq-item__content">
-                        <p class="paragraph c1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
-                        <p class="paragraph c1">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                     </div>
-                  </div>
-                  <div class="faq-item">
-                     <div class="faq-item__head">
-                        <h3 class="title title--h3 bl c1">Est elit tempor ea proident nostrud aliqua in.</h3>
-                        <svg viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M1.41 0.589996L6 5.17L10.59 0.589996L12 2L6 8L0 2L1.41 0.589996Z" fill="#1B65B9"/>
-</svg>
-
-                     </div>
-                     <div class="faq-item__content">
-                        <p class="paragraph c1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
-                        <p class="paragraph c1">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                     </div>
-                  </div>
-                  
-                  <div class="faq-item">
-                     <div class="faq-item__head">
-                        <h3 class="title title--h3 bl c1">Aliqua veniam dolor nulla quis Lorem voluptate laboris nulla voluptate irure amet incididunt quis id.</h3>
-                        <svg viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M1.41 0.589996L6 5.17L10.59 0.589996L12 2L6 8L0 2L1.41 0.589996Z" fill="#1B65B9"/>
-</svg>
-
-                     </div>
-                     <div class="faq-item__content">
-                        <p class="paragraph c1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
-                        <p class="paragraph c1">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                     </div>
-                  </div>
-               </div>
+            <div class="about">
+               <h2 class="title title--h2 c2 bl">Про сервіс</h2>
+               
             </div>
          </div>
       </section>
