--- a/index.html
+++ b/index.html
@@ -469,6 +469,12 @@
          </div>
       </footer>
 
+      <a href="#" class="link link--top">
+         <svg viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+           <path d="M2 10l7-7 7 7" stroke="#fff" stroke-width="3"/>
+         </svg>
+      </a>
+
       <script src=js/libs.min.js></script>
       <script src=js/main.js></script>
    </body>
