добавил страницу about

--- a/terms.html
+++ b/terms.html
@@ -54,7 +54,7 @@
                <div class="accept-content">
                <h4 class="paragraph bl c1">ЗГОДА КОРИСТУВАЧА ІНФОРМАЦІЙНО-ТЕЛЕКОМУНІКАЦІЙНОЇ СИСТЕМИ «ZUBER» НА ОБРОБКУ ПЕРСОНАЛЬНИХ ДАНИХ</h4>
 
-               <p class="paragraph c1">Надаючи згоду на обробку Ваших персональних даних, Ви приймаєте та погоджуєтесь з викладеними нижче Умовами обробки персональних даних</h4>
+               <p class="paragraph c1">Надаючи згоду на обробку Ваших персональних даних, Ви приймаєте та погоджуєтесь з викладеними нижче Умовами обробки персональних даних</p>
 
                <h4 class="paragraph bl c1">Хто збирає персональні дані?</h4>
                <p class="paragraph c1">Ваші персональні дані збирає та зберігає Товариство з обмеженою відповідальністю «ZUBER ЮА», яке є розробником та єдиним власником інформаційно-телекомунікаційної системи ZUBER.</p>
