--- a/terms.html
+++ b/terms.html
@@ -31,8 +31,24 @@
                <div class="header-side">
                   <a href="tel:+380990909999" class="link link--evel link--phone">+38 099 09 099 99</a>
                   <div class="header-city">
+                     <select name="cityselect" class="select select--header select--city">
+                        <option value="Миколаїв">Миколаїв</option>
+                        <option value="Харьков">Харьков</option>
+                        <option value="Киев">Киев</option>
+                        <option value="Миколаїв">Миколаїв</option>
+                        <option value="Харьков">Харьков</option>
+                        <option value="Киев">Киев</option>
+                        <option value="Миколаїв">Миколаїв</option>
+                        <option value="Харьков">Харьков</option>
+                        <option value="Киев">Киев</option>
+                     </select>
                   </div>
                   <div class="header-lang">
+                     <select name="langselect" class="select select--header select--lang">
+                        <option value="укр">укр</option>
+                        <option value="ру">ру</option>
+                        <option value="en">en</option>
+                     </select>
                   </div>
                   <a href="#" class="link link--evel link--login">Вхід</a>
                   <a href="#" class="link link--evel link--reg">Реєстрація</a>
