--- a/finddoctor.html
+++ b/finddoctor.html
@@ -116,7 +116,7 @@
                         <input type="checkbox" class="checkbox" value="Ai" id="ai" name="ai" />
                         <label for="ai">Знайти лікаря на найближчі 24 години</label>
                      </div>
-                     <a href="#" class="btn btn--evel btn--submit">Знайти</a>
+                     <button type="submit" class="btn btn--evel btn--submit">Знайти</button>
                   </form>
                </div>
                <div class="find-filter">
