--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                   </div>
                   <div class="header-lang">
                      <select name="langselect" class="select select--header select--lang">
-                        <option value="/ua/">укр</option>
-                        <option value="/ru/">ру</option>
-                        <option value="/en/">en</option>
+                        <option data-href="/ua/" value="/ua/">укр</option>
+                        <option data-href="/ru/" value="/ru/">ру</option>
+                        <option data-href="/en/" value="/en/">en</option>
                      </select>
                   </div>
                   <a href="#" class="link link--evel link--login">Вхід</a>
