--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
                      </div>
                      <div class="form-block">
                         
-                        <input type="tel" name="phone" required class="field" id="phone">
+                        <input type="tel" name="phone" required class="field phone" id="phone">
                         <label for="phone">Телефон</label>
                      </div>
                      <div class="form-block">
