--- a/result.html
+++ b/result.html
@@ -150,6 +150,16 @@
                               </select>
                               <label for="area">Місце прийому</label>
                            </div>
+                           <div class="form-block">
+                        
+                        <input type="tel" name="phone" required class="field phone" id="phone">
+                        <label for="phone">Телефон</label>
+                     </div>
+                     <div class="form-block">
+                        
+                        <input type="text" name="email" class="field" id="email">
+                        <label for="email">Електронна пошта</label>
+                     </div>
                      </div>
                      <button type="submit" class="btn btn--evel btn--submit">Запис до лiкаря</button>
                   </form>
