--- a/reg.html
+++ b/reg.html
@@ -110,8 +110,8 @@
                         <div class="form-block__adr">
                            <div class="form-block__append">
                               <div class="form-block">
-                                 <input type="text" name="adress[1]" required class="field field--eternal field--place" id="adress[1]">
-                                 <label for="adress[1]">Адреси прийому лікаря</label>
+                                 <input type="text" name="adress_ru_1" required class="field field--eternal field--place" id="adress_ru_1">
+                                 <label for="adress_ru_1">Адреси прийому лікаря</label>
                               </div>
                            </div>
                            <a href="#" class="link link--add add-adr">
@@ -195,8 +195,8 @@
                                     </li>
                                  </ul>
                               </div>
-                              <input type="tel" name="contact[1]" required class="field field--eternal phone" id="contact[1]">
-                              <label for="contact[1]">Телефон</label>
+                              <input type="tel" name="contact_ru_1" required class="field field--eternal phone" id="contact_ru_1">
+                              <label for="contact_ru_1">Телефон</label>
                            </div>
                            <div class="form-block">
                               <div class="field-type">
@@ -264,8 +264,8 @@
                                     </li>
                                  </ul>
                               </div>
-                              <input type="email" name="contact[2]" required class="field field--eternal" id="contact[2]">
-                              <label for="contact[2]">Електронна пошта</label>
+                              <input type="email" name="contact_ru_2" required class="field field--eternal" id="contact_ru_2">
+                              <label for="contact_ru_2">Електронна пошта</label>
                            </div>
                         </div>
                         <a href="#" class="link link--add add-con">
