--- a/reg.html
+++ b/reg.html
@@ -110,7 +110,7 @@
                         <div class="form-block__adr">
                            <div class="form-block__append">
                               <div class="form-block">
-                                 <input type="text" name="adress_ru_1" required class="field field--eternal field--place" id="adress_ru_1">
+                                 <input type="text" name="adress_ru[1]" required class="field field--eternal field--place" id="adress_ru_1">
                                  <label for="adress_ru_1">Адреси прийому лікаря</label>
                               </div>
                            </div>
@@ -195,7 +195,7 @@
                                     </li>
                                  </ul>
                               </div>
-                              <input type="tel" name="contact_ru_1" required class="field field--eternal phone" id="contact_ru_1">
+                              <input type="tel" name="contact_ru[1]" required class="field field--eternal phone" id="contact_ru_1">
                               <label for="contact_ru_1">Телефон</label>
                            </div>
                            <div class="form-block">
@@ -264,7 +264,7 @@
                                     </li>
                                  </ul>
                               </div>
-                              <input type="email" name="contact_ru_2" required class="field field--eternal" id="contact_ru_2">
+                              <input type="email" name="contact_ru[2]" required class="field field--eternal" id="contact_ru_2">
                               <label for="contact_ru_2">Електронна пошта</label>
                            </div>
                         </div>
