--- a/reg.html
+++ b/reg.html
@@ -144,7 +144,7 @@
                                     </span>
                                  </div>
                                  <ul class="field-type__list">
-                                    <li data-type="tel">
+                                    <li data-type="tel" data-name="phone">
                                        <span class="field-type__svg">
                                           <svg width="14" height="23" fill="none" xmlns="http://www.w3.org/2000/svg">
                                              <path d="M11.42.13h-8a2.5 2.5 0 00-2.5 2.5v17a2.5 2.5 0 002.5 2.5h8a2.5 2.5 0 002.5-2.5v-17a2.5 2.5 0 00-2.5-2.5zm-4 21c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm4.5-4h-9v-14h9v14z" fill="#1B65B9"/>
@@ -152,7 +152,7 @@
                                        </span>
                                        <span class="field-type__text">Телефон</span>
                                     </li>
-                                    <li data-type="email">
+                                    <li data-type="email" data-name="email">
                                        <span class="field-type__svg">
                                           <svg width="21" height="17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                              <path d="M18.92.13h-16c-1.1 0-1.99.9-1.99 2l-.01 12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2v-12c0-1.1-.9-2-2-2zm0 4l-8 5-8-5v-2l8 5 8-5v2z" fill="#1B65B9"/>
@@ -160,7 +160,7 @@
                                        </span>
                                        <span class="field-type__text">Email</span>
                                     </li>
-                                    <li data-type="tel">
+                                    <li data-type="tel" data-name="whatsap">
                                        <span class="field-type__svg">
                                           <svg width="21" height="21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                              <path d="M15.67 12.09c.25.13.41.2.46.3.06.11.04.61-.21 1.18-.2.56-1.24 1.1-1.7 1.12-.46.02-.47.36-2.96-.73-2.49-1.09-3.99-3.75-4.11-3.92-.12-.17-.96-1.38-.92-2.61.05-1.22.69-1.8.95-2.04.24-.26.51-.29.68-.26h.47c.15 0 .36-.06.55.45l.69 1.87c.06.13.1.28.01.44l-.27.41-.39.42c-.12.12-.26.25-.12.5.12.26.62 1.09 1.32 1.78.91.88 1.71 1.17 1.95 1.3.24.14.39.12.54-.04l.81-.94c.19-.25.35-.19.58-.11l1.67.88zM10.92.13a10 10 0 11-5.35 18.45L.92 20.13l1.55-4.65A10 10 0 0110.92.13zm0 2a8 8 0 00-8 8c0 1.72.54 3.31 1.46 4.61l-.96 2.89 2.89-.96a7.95 7.95 0 004.61 1.46 8 8 0 000-16z" fill="#1B65B9"/>
@@ -168,7 +168,7 @@
                                        </span>
                                        <span class="field-type__text">Whatsap</span>
                                     </li>
-                                    <li data-type="tel">
+                                    <li data-type="tel" data-name="viber">
                                        <span class="field-type__svg">
                                           <svg width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                              <path d="M11 21.93c5.965 0 10.8-4.836 10.8-10.8C21.8 5.165 16.965.33 11 .33 5.035.33.2 5.165.2 11.13c0 5.964 4.835 10.8 10.8 10.8z" fill="#1B65B9"/>
@@ -177,7 +177,7 @@
                                        </span>
                                        <span class="field-type__text">Viber</span>
                                     </li>
-                                    <li data-type="tel">
+                                    <li data-type="tel" data-name="telegram">
                                        <span class="field-type__svg">
                                           <svg width="19" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                              <path d="M7.7 14.78l.28-4.23 7.68-6.92c.34-.31-.07-.46-.52-.19L5.66 9.43l-4.1-1.3c-.88-.25-.89-.86.2-1.3L17.73.67c.73-.33 1.43.18 1.15 1.3l-2.72 12.81c-.19.91-.74 1.13-1.5.71l-4.14-3.06-1.99 1.93c-.23.23-.42.42-.83.42z" fill="#1B65B9"/>
@@ -185,7 +185,7 @@
                                        </span>
                                        <span class="field-type__text">Telegram</span>
                                     </li>
-                                    <li data-type="tel">
+                                    <li data-type="tel" data-name="messenger">
                                        <span class="field-type__svg">
                                           <svg width="21" height="21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                              <path d="M10.92.13c-5.64 0-10 4.13-10 9.7 0 2.91 1.19 5.44 3.14 7.17.16.13.26.35.27.57l.05 1.78c.04.57.61.94 1.13.71l1.98-.87c.17-.06.36-.09.53-.06.9.27 1.9.4 2.9.4 5.64 0 10-4.13 10-9.7 0-5.57-4.36-9.7-10-9.7zm6 7.46l-2.93 4.67c-.47.73-1.47.92-2.17.37L9.48 10.9a.6.6 0 00-.72 0L5.6 13.3c-.42.33-.97-.17-.68-.63L7.85 8c.47-.73 1.47-.92 2.17-.4l2.34 1.76a.6.6 0 00.72 0l3.16-2.4c.42-.33.97.17.68.63z" fill="#1B65B9"/>
@@ -195,8 +195,8 @@
                                     </li>
                                  </ul>
                               </div>
-                              <input type="tel" name="contact_ru[1]" required class="field field--eternal phone" id="contact_ru_1">
-                              <label for="contact_ru_1">Телефон</label>
+                              <input type="tel" name="contact[1][phone]" required class="field field--eternal phone" id="contact[1]">
+                              <label for="contact[1]">Телефон</label>
                            </div>
                            <div class="form-block">
                               <div class="field-type">
@@ -206,66 +206,12 @@
                                              <path d="M18.92.13h-16c-1.1 0-1.99.9-1.99 2l-.01 12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2v-12c0-1.1-.9-2-2-2zm0 4l-8 5-8-5v-2l8 5 8-5v2z" fill="#1B65B9"/>
                                           </svg>
                                     </span>
-                                    <span class="selected-triangle">
-                                       <svg width="12" height="8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                          <path d="M1.41.59L6 5.17 10.59.59 12 2 6 8 0 2 1.41.59z" fill="#1B65B9"/>
-                                       </svg>
-                                    </span>
+                                    
                                  </div>
-                                 <ul class="field-type__list">
-                                    <li data-type="tel">
-                                       <span class="field-type__svg">
-                                          <svg width="14" height="23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                             <path d="M11.42.13h-8a2.5 2.5 0 00-2.5 2.5v17a2.5 2.5 0 002.5 2.5h8a2.5 2.5 0 002.5-2.5v-17a2.5 2.5 0 00-2.5-2.5zm-4 21c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm4.5-4h-9v-14h9v14z" fill="#1B65B9"/>
-                                          </svg>
-                                       </span>
-                                       <span class="field-type__text">Телефон</span>
-                                    </li>
-                                    <li data-type="email">
-                                       <span class="field-type__svg">
-                                          <svg width="21" height="17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                             <path d="M18.92.13h-16c-1.1 0-1.99.9-1.99 2l-.01 12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2v-12c0-1.1-.9-2-2-2zm0 4l-8 5-8-5v-2l8 5 8-5v2z" fill="#1B65B9"/>
-                                          </svg>
-                                       </span>
-                                       <span class="field-type__text">Email</span>
-                                    </li>
-                                    <li data-type="tel">
-                                       <span class="field-type__svg">
-                                          <svg width="21" height="21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                             <path d="M15.67 12.09c.25.13.41.2.46.3.06.11.04.61-.21 1.18-.2.56-1.24 1.1-1.7 1.12-.46.02-.47.36-2.96-.73-2.49-1.09-3.99-3.75-4.11-3.92-.12-.17-.96-1.38-.92-2.61.05-1.22.69-1.8.95-2.04.24-.26.51-.29.68-.26h.47c.15 0 .36-.06.55.45l.69 1.87c.06.13.1.28.01.44l-.27.41-.39.42c-.12.12-.26.25-.12.5.12.26.62 1.09 1.32 1.78.91.88 1.71 1.17 1.95 1.3.24.14.39.12.54-.04l.81-.94c.19-.25.35-.19.58-.11l1.67.88zM10.92.13a10 10 0 11-5.35 18.45L.92 20.13l1.55-4.65A10 10 0 0110.92.13zm0 2a8 8 0 00-8 8c0 1.72.54 3.31 1.46 4.61l-.96 2.89 2.89-.96a7.95 7.95 0 004.61 1.46 8 8 0 000-16z" fill="#1B65B9"/>
-                                          </svg>
-                                       </span>
-                                       <span class="field-type__text">Whatsap</span>
-                                    </li>
-                                    <li data-type="tel">
-                                       <span class="field-type__svg">
-                                          <svg width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                             <path d="M11 21.93c5.965 0 10.8-4.836 10.8-10.8C21.8 5.165 16.965.33 11 .33 5.035.33.2 5.165.2 11.13c0 5.964 4.835 10.8 10.8 10.8z" fill="#1B65B9"/>
-                                             <path d="M10.942 6.669c.068-.063.117-.072.355-.064.125.004.307.018.407.03.503.063.91.184 1.357.402.439.215.72.418 1.092.788.347.349.54.613.746 1.024.285.573.448 1.254.476 2.004.01.255.002.313-.056.385-.111.142-.356.119-.439-.04-.027-.053-.034-.098-.043-.303a5.265 5.265 0 00-.08-.76c-.173-.951-.63-1.711-1.358-2.256-.608-.456-1.235-.678-2.058-.726-.278-.016-.326-.026-.39-.075-.116-.092-.122-.308-.009-.41zm1.744 1.882c-.294-.175-.729-.305-1.125-.337-.144-.012-.223-.041-.277-.104a.266.266 0 01-.022-.33c.076-.119.193-.138.543-.086.889.13 1.577.543 2.027 1.212.254.377.412.82.466 1.295.018.174.018.49-.002.543a.331.331 0 01-.133.145.33.33 0 01-.246-.008c-.113-.057-.146-.148-.146-.393 0-.38-.098-.778-.268-1.087a2.224 2.224 0 00-.817-.85zm.495 1.948c-.086.079-.246.082-.343.008-.07-.053-.092-.11-.108-.26-.019-.2-.054-.34-.114-.47-.129-.276-.356-.42-.74-.466-.179-.022-.233-.042-.292-.111a.272.272 0 01.082-.41c.056-.027.079-.03.202-.022.076.004.189.017.249.03.288.061.51.171.698.348.243.23.376.507.435.906.04.26.023.362-.07.447zm2.186 3.84c-.108.278-.53.801-.824 1.025-.266.201-.455.279-.704.29-.205.01-.29-.007-.551-.115-2.055-.846-3.696-2.108-4.999-3.843a10.907 10.907 0 01-1.553-2.82c-.205-.569-.216-.816-.046-1.107.073-.122.385-.426.612-.596.378-.28.552-.384.69-.414a.791.791 0 01.366.034c.051.018.13.059.176.088.278.184 1.052 1.173 1.305 1.667.145.282.194.49.148.646-.047.166-.125.254-.471.534-.14.112-.27.227-.29.258a.68.68 0 00-.095.33c.001.245.16.687.367 1.028.161.264.45.603.735.863.335.307.63.516.965.681.428.214.69.267.882.178a.649.649 0 00.115-.064 9.49 9.49 0 00.25-.302c.238-.298.292-.347.454-.402a.783.783 0 01.63.057c.161.083.512.301.739.458.298.21.937.73 1.023.833.153.188.179.427.076.692z" fill="#fff"/>
-                                          </svg>
-                                       </span>
-                                       <span class="field-type__text">Viber</span>
-                                    </li>
-                                    <li data-type="tel">
-                                       <span class="field-type__svg">
-                                          <svg width="19" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                             <path d="M7.7 14.78l.28-4.23 7.68-6.92c.34-.31-.07-.46-.52-.19L5.66 9.43l-4.1-1.3c-.88-.25-.89-.86.2-1.3L17.73.67c.73-.33 1.43.18 1.15 1.3l-2.72 12.81c-.19.91-.74 1.13-1.5.71l-4.14-3.06-1.99 1.93c-.23.23-.42.42-.83.42z" fill="#1B65B9"/>
-                                          </svg>
-                                       </span>
-                                       <span class="field-type__text">Telegram</span>
-                                    </li>
-                                    <li data-type="tel">
-                                       <span class="field-type__svg">
-                                          <svg width="21" height="21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                             <path d="M10.92.13c-5.64 0-10 4.13-10 9.7 0 2.91 1.19 5.44 3.14 7.17.16.13.26.35.27.57l.05 1.78c.04.57.61.94 1.13.71l1.98-.87c.17-.06.36-.09.53-.06.9.27 1.9.4 2.9.4 5.64 0 10-4.13 10-9.7 0-5.57-4.36-9.7-10-9.7zm6 7.46l-2.93 4.67c-.47.73-1.47.92-2.17.37L9.48 10.9a.6.6 0 00-.72 0L5.6 13.3c-.42.33-.97-.17-.68-.63L7.85 8c.47-.73 1.47-.92 2.17-.4l2.34 1.76a.6.6 0 00.72 0l3.16-2.4c.42-.33.97.17.68.63z" fill="#1B65B9"/>
-                                          </svg>
-                                       </span>
-                                       <span class="field-type__text">Messenger</span>
-                                    </li>
-                                 </ul>
+                                 
                               </div>
-                              <input type="email" name="contact_ru[2]" required class="field field--eternal" id="contact_ru_2">
-                              <label for="contact_ru_2">Електронна пошта</label>
+                              <input type="email" name="contact[2][email]" required class="field field--eternal" id="contact[2]">
+                              <label for="contact[2]">Електронна пошта</label>
                            </div>
                         </div>
                         <a href="#" class="link link--add add-con">
@@ -357,7 +303,19 @@
             <path d="M2 10l7-7 7 7" stroke="#fff" stroke-width="3"/>
          </svg>
       </a>
+
       <script src=js/libs.min.js></script>
       <script src=js/main.js></script>
+
+      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCPMMGhzM5vjjDdsTm6Slx2uRNV-9SsEg&libraries=places"></script>
+      <!-- <script>
+        function initialize() {
+            var input = document.getElementsByClassName('field--place');
+            new google.maps.places.Autocomplete(input);
+        }
+
+        google.maps.event.addDomListener(window, 'load', initialize);
+    </script> -->
+
    </body>
 </html>
