--- a/about.html
+++ b/about.html
@@ -157,9 +157,11 @@
                <h2 class="title title--h2 lg c1 text-center">
                   Знайдіть лікаря на найбільш зручний час та легко запишіться на лікування
                </h2>
+
                <p class="title title--h2 lg c2 text-center">
                   Виберіть параметри пошуку лікаря
                </p>
+               <a href="#" class="btn btn--evel btn--search">Параметри пошуку</a>
               <form action="any.php" class="form form-page">
                <div class="form-rows">
                   <div class="form-row">
