--- a/finddoctor.html
+++ b/finddoctor.html
@@ -70,6 +70,7 @@
                   <p class="title title--h2 lg c2 text-center">
                      Виберіть параметри пошуку лікаря
                   </p>
+                  <a href="#" class="btn btn--evel btn--search">Параметри пошуку</a>
                   <form action="any.php" class="form form-page">
                      <div class="form-rows">
                         <div class="form-row">
