--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
                   <a href="#" class="link link--evel link--reg">Реєстрація</a>
                </div>
                <div class="header-mobile">
-                  <a href="#" class="link link--toggle">
-                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-1 -1 22 16" width="18" height="12">
-                        <path d="M18 7H0V5h18v2z" id="a"/>
-                        <path d="M0 0h18v2H0V0z" id="b"/>
-                        <path d="M0 10h18v2H0v-2z" id="c"/>
+                  <a href="#" class="link link--toggle ">
+                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 12" width="18" height="12">
+                        <path d="M18 7H0V5h18v2z" />
+                        <path d="M18 7H0V5h18v2z" />
+                        <path d="M0 0h18v2H0V0z" />
+                        <path d="M0 10h18v2H0v-2z" />
                      </svg>
                   </a>
                </div>
